# test-glfw-cmake

./: CMakeLists.txt  README.md  main.c  main2.c  main3.cc
include/glad/: gl.h
